--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,140 @@
-
-.container{
-    display: flex;
-    background-color:gold;
+header {
+	width: 100%;
+	height: 100px;
+	background-color: gold;
+	z-index: 2;
+    position: relative;
 }
+
+header .container {
+	position: flex;
+}
+
+header #logotipo {
+	position: absolute;
+    width: 100px;
+    height: 100px;
+	z-index: 3;
+    left: 20px;
+}
+
+#menu {
+	margin: 12px 0;
+}
+#menu li {
+	display: inline-block;
+}
+#menu li.search {
+	width: 300px;
+}
+
+#menu li.search input {
+	background-color: #fff;
+	border: none;
+	height: 25px;
+    width: 300px;
+    position: absolute;
+    left: 100px;
+    font-size: 15px;
+}
+
+#menu li.search ::-webkit-input-placeholder {
+	color: gray;
+    font-size: 15px;
+}
+#menu li.search button {
+    background: none;
+    border: none;
+    height: 25px;
+    width: 27px;
+	position: absolute;
+    left: 375px;
+}
+#menu li.search button i {
+	font-size: 16px;
+	color: gray;
+}
+#menu li a {
+	color: darkblue;
+	font-size: 16px;
+	padding: 20px 10px;
+}
+#menu #opcoes{
+    right:20px;
+    top: 5px;
+    position: absolute;
+}
+
+#menu li.search .input-group {
+	top: 40px;
+}
+
 .item-menu{
-    
+    color: rgb(5, 5, 82);
+   font-size: 25px;
+   left: 150px; 
    border: 1px;
-   
-}   
+   position: absolute;
+}
+
+#menu  #numero {
+	font-size: 15px;
+	padding: 10px 20px;
+    position: absolute;
+    right: 85px;
+    top:50px;
+}
+
+#menu  #carrinho {
+    position: absolute;
+    right:10px;
+    top:38px;
+    cursor: pointer;
+}
+
 .d-block {
     height: 460px;
-    width: 200px;
-   
+    width: 200px; 
 }
 body{
     display: flow ;
     background-color: cadetblue;
 }
+
+.filters-group{
+    background-color: gainsboro;
+    width: 220px;
+    height: 458.5px;
+    border: 1;
+    border-color: black;
+    position: absolute;
+}
+
+.filtros{
+    display: flow;
+    padding: 20px 10px ;
+    width: 100px;
+    height: 40px;
+    position: absolute;
+    top:200px;
+    left:50px;
+}
+
+.carousel{
+    display: flex;
+    width: 900px;
+
+    position: static;
+    left:140px;
+
+}
+
 .container1{
     display: flex;
     background-color: lightsteelblue;
     
 }
-.filtros{
-    display: flow;
-    width: 70px;
-    height: 40px;
-}
-.carousel{
-    display: flow;
-    width: 1050px;
-    height: 300px;
-}
+
 .vendas{
     display: flow;
 }
